cis 1.13/ingress resources/dev-checkin/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc1
  name: svc1
spec:
  ports:
  - name: svc1-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: svc1
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc2
  name: svc2
spec:
  ports:
  - name: svc2-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: svc2
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc3
  name: svc3
spec:
  ports:
  - name: svc3-8082
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: svc3
  type: ClusterIP
